src/nav/nav.css
header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  display: flex;
  align-items: center;
  padding: 0 10px;
  justify-content: space-between;
  /* backdrop-filter: blur(3px); */
  border-bottom: 1px solid var(--black-color);
  background-color: var(--white-color);
  z-index: 15;
  /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px; */
}

.header__box,
nav {
  height: 50px;
}

.header__box {
  display: flex;
  justify-content: space-between;
}

#logo {
  height: 100%;
  display: flex;
  align-items: center;
  font-weight: 700;
  font-size: 16px;
}

/* #logo a {
  border: 1px solid black;
  padding: 5px 7px;
} */

nav {
  padding: var(--base-spacing);
}

.nav__list {
  display: flex;
  height: 100%;
}

.nav__list > li {
  display: flex;
  height: 100%;
  align-items: center;
  margin: 0 10px;
  padding: 0 7px;
  cursor: pointer;
  transition: all 0.2s ease;
  opacity: 1;
  font-weight: 600;
  border-radius: 60% 30%;
}

.nav__list > li:hover {
  background-color: var(--yellow-color);
  font-weight: 800;
}

.nav__btn__container {
  display: none;
}

.active {
  border: 1px solid var(--black-color);
}

@media screen and (max-width: 600px) {
  .header__box {
    width: 100%;
  }

  .nav__btn__container {
    display: block;
    height: 100%;
    line-height: 50px;
  }

  .nav__btn {
    position: relative;
    width: 30px;
    height: 20px;
    border-radius: 5px;
    cursor: pointer;
    z-index: 1;
  }

  .nav__btn::before {
    content: "";
    position: absolute;
    right: 0;
    top: 0;
    width: 80%;
    height: 1px;
    border-radius: 5px;
    background-color: var(--black-color);
  }

  .nav__btn::after {
    content: "";
    position: absolute;
    right: 0;
    top: 7px;
    width: 60%;
    height: 1px;
    border-radius: 5px;
    background-color: var(--black-color);
  }

  nav {
    display: block;
    position: absolute;
    right: 0;
    width: 25%;
    height: 100vh;
    background-color: var(--light-grey-color);
    top: 50px;
    border-top: 1px solid var(--black-color);
    /* border-bottom: 1px solid var(--black-color); */
    transform: translateX(100%);
    z-index: 2;
  }

  nav.open {
    transform: translateX(0%);
    transition: all 0.3s ease-in-out;
  }

  nav.close {
    transform: translateX(100%);
    transition: all 0.2s ease;
  }

  .nav__list {
    width: 100%;
    flex-direction: column;
    align-items: flex-end;
    right: 0;
  }

  .nav__list > li {
    height: 35px;
    margin: 5px;
    padding: 0 15px;
  }
}

